logs/pykwiki2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/Markdown-2.6.11.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markdown'...
Listing './lib/python3.5/site-packages/markdown/extensions'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyScss-1.3.5.egg-info'...
Listing './lib/python3.5/site-packages/pykwiki2'...
Listing './lib/python3.5/site-packages/pykwiki2/data'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_data'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_data/source'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_data/styles'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_data/styles/default'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_data/styles/default/static'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_theme'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_theme/static'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_theme/static/codehilite'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_theme/static/fonts'...
Listing './lib/python3.5/site-packages/pykwiki2/data/default_theme/static/mustachejs'...
Listing './lib/python3.5/site-packages/pykwiki2/ext'...
Listing './lib/python3.5/site-packages/pykwiki2-2.1.0.egg-info'...
Listing './lib/python3.5/site-packages/scss'...
Listing './lib/python3.5/site-packages/scss/extension'...
Listing './lib/python3.5/site-packages/scss/extension/compass'...
Listing './lib/python3.5/site-packages/scss/grammar'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
